--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1166,10 +1166,11 @@ a {
     @media screen and (max-width: 479px) {
       .footer .instagramLink {
         float: none;
-        width: 210px;
+        width: 100%;
         margin-left: auto;
         margin-right: auto;
-        display: block; } }
+        display: block;
+        text-align: center; } }
     @media screen and (max-width: 767px) {
       .footer .instagramLink span {
         font-size: 12px; } }
